Fixing data loading issue

--- a/app/src/main/res/layout/activities_row_layout.xml
+++ b/app/src/main/res/layout/activities_row_layout.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Seconds"
+                android:text="Minutes"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="@+id/activeDuration"
                 app:layout_constraintStart_toEndOf="@+id/activeDuration"
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                tools:text="Calories burnt"
+                android:text="Calories burnt"
                 app:layout_constraintBottom_toBottomOf="@+id/calories"
                 app:layout_constraintStart_toEndOf="@+id/calories"
                 app:layout_constraintTop_toTopOf="@+id/calories" />
@@ -102,7 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                tools:text="covered"
+                android:text="covered"
                 app:layout_constraintBottom_toBottomOf="@+id/distance"
                 app:layout_constraintStart_toEndOf="@+id/distanceUnit"
                 app:layout_constraintTop_toTopOf="@+id/distance"
